# mnemosyne

./: .env  Cargo.toml  api.http  docker-compose.yml
migrations/: 20230115015952_init.sql  20230128132048_project_field.sql
src/: abstractions.rs  app_config.rs  auth.rs  main.rs  middleware.rs
src/api/: auth.rs  errors.rs  health.rs  mod.rs  projects.rs  task.rs  users.rs
src/api/auth/: login.rs  user.rs
src/data/: mod.rs
src/messaging/: messages.rs  mod.rs  sqs_messanger.rs
src/models/: mod.rs  project.rs  task.rs  user.rs
src/repository/: mod.rs  project.rs  storage.rs  task.rs  user.rs
src/repository/objects/: mod.rs  task_dbo.rs  user.rs
src/services/: auth_service.rs
