[package]
name = "mnemosyne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
serde = { version = "1.0.152", features = ["derive"] }
env_logger = "0.8"
log = "0.4"
uuid = { version = "1.2.2", features = ["v4"] }
getset = "0.1.2"
tokio = "1.24.1"
derive_more = "0.99.17"
