[package]
name = "mnemosyne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix = "0.11.0"
actix-rt = "2.2"
actix-cors = "0.6.4"
openssl = { version = "0.10" }
serde = { version = "1.0.152", features = ["derive"] }
env_logger = "0.8"
log = "0.4"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
getset = "0.1.2"
tokio = { version = "1.24.1", features = ["full"] }
derive_more = "0.99.17"
json-patch = "0.3.0"
serde_json = { version = "1.0.91", features = ["raw_value"] }
anyhow = "1.0.68"
async-trait = "0.1.61"

# Tokio:
sqlx = { version = "0.6", features = [
    "runtime-actix-native-tls",
    "postgres",
    "chrono",
    "offline",
    "macros",
    "migrate",
    "decimal",
    "json",
    "uuid",
] }
dotenv = "0.15.0"
dotenvy = "0.15.6"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["redis-rs-session"] }
password-hash = "0.4.2"
argon2 = { version = "0.4.1", features = ["alloc"] }

#auth dependencies
actix-web-httpauth = "0.8.0"
argonautica = "0.2.0"
hmac = "0.12.1"
jsonwebtoken = "8.2.0"
sha2 = "0.10.6"
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"
thiserror = "1.0.38"
